--- a/css/admin.css
+++ b/css/admin.css
@@ -130,3 +130,12 @@ table tr td{
     background-color: #ff4757;
     color: white;
 }
+
+
+/* css for login */
+.login{
+    border: 1px solid grey;
+    width: 20%;
+    margin: 10% auto;
+    padding: 2%;
+}
